Fix: login ot working on iOS
Opening a new window by JS not working on iOs, we use a simply link with '_blank' attribute which open a new tab.

--- a/frontend/src/styles/mixins.scss
+++ b/frontend/src/styles/mixins.scss
@@ -18,7 +18,8 @@
     margin: 20px auto 0 auto;
     display: flex;
     flex-direction: column;
-    > button {
+    > button, > a {
+      color: white;
       margin-top: 10px;
       padding: 10px;
       border-radius: 0;
